update dimensions
